--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
   "openai>=1.66.0",
   "httpx>=0.28.0",
   "pydantic>=2.10.0",
+  "databricks-sdk>=0.36.0",
+  "requests>=2.31.0",
   # Conflict resolution pins for Databricks Apps pre-installed packages
   "tenacity==9.0.0",
   "pillow==11.1.0",
