--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
-*conf*.json
-.DS_Store
-__pycache__
-.idea/
-.env
 
+# Python virtual environments
+.venv/
+__pycache__/
+
+# Databricks
+.databricks
+mlruns
+
+# Environment files
 .env.local
+.env.dev
+
+# OS files
+.DS_Store
+
+# Frontend dependencies and build outputs
+client/node_modules/
+client/dist/
+package-lock.json
+client/package-lock.json
+
+# Generated API client
+client/src/fastapi_client/
+
+
+email_app/
+
+app.yaml.previous
+.setup_progress.json
