--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
   "werkzeug==3.1.3",
   "nbconvert>=7.16.6",
   "ipykernel>=6.29.5",
+  "ipywidgets>=8.1.7",
+  "plotly>=6.2.0",
 ]
 
 [dependency-groups]
